# Projeto-megastore-search

./: .gitignore  LICENSE  README.md
megastore-search/: Cargo.toml
megastore-search/src/: main.rs
megastore-search/src/busca/: cache.rs  mod.rs  motor.rs
megastore-search/src/indexacao/: inverso.rs  mod.rs  texto.rs
megastore-search/src/metricas/: mod.rs
megastore-search/src/modelos/: mod.rs  produto.rs
megastore-search/src/recomendacao/: grafo.rs  mod.rs
